# ittleskin

./: ChangeLog  Makefile.am  README.md  configure.in  liblittleskin.spec.in  littleskin.pc.in
src/: Makefile.am  littleskin-private.h  littleskin.c  littleskin.h  test-littleskin.c
themes/: Makefile.am
themes/lcd/: Makefile.am
